--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
   postgres:
     image: postgres:9.6
     environment:
-      - POSTGRES_USER=sibu
-      - POSTGRES_PASSWORD=sibu_password
-      - POSTGRES_DB=DigitalCVAppDatabase
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=pass
+      - POSTGRES_DB=db
     volumes:
       - ./gitignore/postgresql:/var/lib/postgresql/data
     ports:
