--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,8 @@ services:
     environment:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=pass
-      - POSTGRES_DB=db
+      - POSTGRES_DB=DigitalCVAppDatabase
+      # - POSTGRES_DB=db
     volumes:
       - ./gitignore/postgresql:/var/lib/postgresql/data
     ports:
