--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "node dist/bundle.js",
+    "start": "nodemon express.js",
     "test": ""
   },
   "keywords": [],
@@ -15,13 +14,10 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4"
+    "nodemon": "^3.0.2"
   }
 }
