--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "digital-cv",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/index.js",
   "scripts": {
     "start": "node express.js",
     "test": ""
