--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "/index.js",
   "scripts": {
-    "start": "nodemon express.js",
+    "start": "node express.js",
     "test": ""
   },
   "keywords": [],
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.1.1",
     "pg": "^8.11.3"
   },
   "devDependencies": {
